--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@
 
 
         <!--====== PROJECTS ======-->
-        <section id="projects" class="projects w-[71.875rem] section container container-padding-1 relative flex items-center flex-col">
+        <section id="projects" class="hidden projects w-[71.875rem] section container container-padding-1 relative items-center flex-col">
             <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
                 Highlights
             </h1>
