edited social link url

--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,12 @@
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/heisdanielade" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://github.com/heisdanielade" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-github-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop color-primary text-sm">
-                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/heisdanielade" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
                     <a href="https://github.com/heisdanielade" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">GitHub</a>
                 </div>
@@ -395,7 +395,7 @@
     
                 <!-- social links -->
                 <div class="socials flex items-center justify-center text-xl">
-                    <a href="https://www.linkedin.com/in/daniel-adediran-072a29282" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://www.linkedin.com/in/heisdanielade" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-linkedin-box-fill"></i></a>
                     <a href="https://github.com/heisdanielade" target="_blank" class="color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i class="ri-github-line"></i></a>
                 </div>
             </div>
