added new iphone entry style page loader

--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,17 @@
     <!--====== PAGE LOADER ======-->
     <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
 
-        <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
+        <!-- <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
-                #
+                @
             </text>
-        </svg>
+        </svg> -->
 
+        <div class="greeting-container">
+            <span class="greeting gradient-text"></span>
+        </div>
     </div>
+
 
 
    <!--====== HEADER ======-->
@@ -87,7 +91,7 @@
             </div>
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info not-shown text-center text-5xl mt-20">
-                    <span class="gradient-text">Code. Create. Innovate.<br> Repeat.</span><span class="hht stroke-text-2 hidden">ces.</span>
+                    <span class="gradient-text">Learn. Code. Innovate.<br> Repeat.</span><span class="hht stroke-text-2 hidden">xyz.</span>
                 </h1>
 
                 <div class="location flex items-center justify-center mt-6">
