--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,15 @@
  <div id="page" class="page">
 
     <!--====== PAGE LOADER ======-->
-    <div id="page-loader" class="page-loader fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
-
+    <div id="page-loader" class="page-loader transition-opacity fixed flex items-center justify-center top-0 left-0 z-50 h-screen w-full">
         <!-- <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
                 @
             </text>
         </svg> -->
 
-        <div class="greeting-container">
-            <span class="greeting gradient-text"></span>
+        <div class="greeting-container h-9 flex items-center justify-center overflow-hidden">
+            <span class="greeting gradient-text text-4xl font-semibold tranjslate-x-0"></span>
         </div>
     </div>
 
