--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
                 <h1 class="info not-shown text-center text-5xl mt-20">
-                    <span class="gradient-text leading-10">Computer Science<br>Student.</span><span class="hht stroke-text-2 hidden">xyz</span>
+                    <span class="gradient-text leading-10">Aspiring Software<br>Engineer.</span><span class="hht stroke-text-2 hidden">xyz</span>
                 </h1>
                 
                 <a href="https://github.com/heisdanielade" target="_blank" class="github__link btn-hover not-shown color-secondary bg-primary flex items-center justify-center mt-9 mb-11 w-44 h-14 rounded-full">
