--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                 <div class="desktop color-primary text-sm">
                     <a href="https://www.linkedin.com/in/heisdanielade" aria-label="Visit LinkedIn profile" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="https://github.com/heisdanielade" aria-label="Visit GitHub profile" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">GitHub</a>
+                    <a href="https://leetcode.com/u/heisdanielade/" aria-label="Visit Leetcode profile" target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Leetcode</a>
                 </div>
             </div>
         </nav>
