--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
             </text>
         </svg> -->
 
-        <div class="greeting-container h-9 flex items-center justify-center overflow-hidden">
-            <span class="greeting gradient-text text-4xl font-semibold tranjslate-x-0"></span>
+        <div class="word-container h-9 flex items-center justify-center overflow-hidden">
+            <span class="word gradient-text text-4xl font-semibold tranjslate-x-0"></span>
         </div>
     </div>
 
