reduced time of page loade

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
  <div id="page" class="page">
 
     <!--====== PAGE LOADER ======-->
-    <div id="page-loader" class="page-loader fixed hidden items-center justify-center transition-opacity top-0 left-0 z-50 h-screen w-full">
+    <div id="page-loader" class="page-loader fixed flex items-center justify-center transition-opacity top-0 left-0 z-50 h-screen w-full">
         <!-- <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
                 @
