--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <div id="page" class="page">
         <!--====== PAGE LOADER ======-->
         <div id="page-loader"
-            class="page-loader fixed flex items-center justify-center transition-opacity top-0 left-0 z-50 h-screen w-full">
+            class="page-loader fixed hidden items-center justify-center transition-opacity top-0 left-0 z-50 h-screen w-full">
             <!-- <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg">
             <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="Protest Guerrilla" font-size="5.25rem" fill="none" stroke="#242424" stroke-width="1.9" class="loader">
                 @
@@ -38,6 +38,7 @@
                 <span class="word gradient-text text-4xl font-semibold translate-x-0"></span>
             </div>
         </div>
+
 
         <!--====== HEADER ======-->
         <header id="header " class="header md:max-w-screen-md lg:max-w-screen-lg mx-auto w-full bg-transparent">
@@ -84,6 +85,7 @@
             </nav>
         </header>
 
+
         <!--======== MAIN ========-->
         <main class="main overflow-hidden container flex flex-col items-center w-full">
             <!--====== HOME ======-->
@@ -105,9 +107,13 @@
                 </div>
                 <!-- content -->
                 <div class="content flex items-center justify-center flex-col w-[40rem] pt-2">
-                    <h1 class="info not-shown text-center text-[2.5rem] mt-20">
-                        <span class="gradient-text leading-10">I'm Daniel,<br />CS Student @UZ.</span><span
-                            class="hht stroke-text-2 hidden">xyz</span>
+                    <h1 class="info not-shown text-center text-4xl mt-20">
+                        <span class="gradient-text leading-10">
+                            <span class="font-light">I'm</span> 
+                            <span>Daniel Ade,</span><br />
+                            <span class="text-xl font-semibold">CS Student @UZ.</span>
+                        </span>
+                        <span class="hht stroke-text-2 hidden">xyz</span>
                     </h1>
                     <!-- link -->
                     <a href="https://github.com/heisdanielade" target="_blank"
@@ -174,7 +180,7 @@
 
             <!--====== SKILLSET ======-->
             <section id="skillset"
-                class="skillset bg-container-desktop w-full max-w-screen-lg mx-auto p-4 md:py-8 mb-12 section container container-padding-1 relative flex items-center justify-center flex-col">
+                class="skillset bg-container-desktop w-full max-w-screen-lg mx-auto p-4 md:py-8 mb-6 section container container-padding-1 relative flex items-center justify-center flex-col">
                 <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
                     Arsenal
                 </h1>
@@ -238,7 +244,7 @@
 
             <!-- ====== PROJECTS ======-->
             <section id="projects"
-                class="projects relative w-full max-w-screen-lg mx-auto p-4 md:py-8 mb-6 section container container-padding-1 hidden items-center justify-center flex-col">
+                class="projects relative w-full max-w-screen-lg mx-auto md:py-8 mb-6 section container container-padding-1 hidden items-center justify-center flex-col">
                 <h1 class="title-info not-shown mb-14 text-center text-4xl gradient-text">
                     Highlights
                 </h1>
@@ -250,13 +256,13 @@
                     Projects
                 </span>
 
-                <div class="content mt-4 w-full flex flex-col items-center gap-8 p-5">
+                <div class="content mt-4 w-full flex flex-col items-center gap-8">
                     <!-- Project Box 1-->
                     <div
-                        class="box not-shown flex flex-col lg:flex-row items-center gap-8 w-full max-w-5xl p-6 rounded-3xl shadow-sm">
+                        class="box not-shown hidden flex-col lg:flex-row items-center gap-8 w-full max-w-5xl p-6 shadow-sm">
                         <!-- Left Section -->
                         <div class="left flex flex-col items-center justify-center w-full lg:w-1/2">
-                            <img class="w-full max-w-[29rem] h-auto mb-6 rounded-3xl shadow-sm"
+                            <img class="w-full max-w-[25rem] h-auto mb-6 rounded-3xl shadow-sm"
                                 src="assets/images/projects/pamietampsa.png" alt="Project" />
                         </div>
 
@@ -266,7 +272,7 @@
                                 <a href="#" target="_blank"
                                     class="text-blue-600 hover:text-blue-800 flex items-center gap-2">
                                     <span>PamiętamPsa - Pet care</span>
-                                    <i class="ri-links-line"></i>
+                                    <i class="ri-arrow-right-up-line"></i>
                                 </a>
                             </h2>
                             <p class="text-gray-700 text-sm leading-relaxed mb-4">
@@ -282,10 +288,10 @@
                                 </a>
                                 <!-- Tech Stack -->
                                 <div class="stack flex flex-wrap justify-center gap-3">
-                                    <img class="w-7 h-7" src="assets/images/icons/Spring.svg" alt="Spring" />
-                                    <img class="w-7 h-7" src="assets/images/icons/java.svg" alt="Java" />
-                                    <img class="w-7 h-7" src="assets/images/icons/tailwind-css.svg" alt="TailwindCSS" />
-                                    <img class="w-7 h-7" src="assets/images/icons/Vue.js.svg" alt="VueJs" />
+                                    <img class="w-6 h-6" src="assets/images/icons/Spring.svg" alt="Spring" />
+                                    <img class="w-6 h-6" src="assets/images/icons/java.svg" alt="Java" />
+                                    <img class="w-6 h-6" src="assets/images/icons/tailwind-css.svg" alt="TailwindCSS" />
+                                    <img class="w-6 h-6" src="assets/images/icons/Vue.js.svg" alt="VueJs" />
                                 </div>
                             </div>
                         </div>
@@ -293,10 +299,10 @@
 
                     <!-- Project Box 2-->
                     <div
-                        class="box not-shown flex flex-col lg:flex-row items-center gap-8 w-full max-w-5xl p-6 rounded-3xl shadow-sm">
+                        class="box not-shown flex flex-col lg:flex-row items-center gap-8 w-full max-w-5xl p-6 shadow-sm">
                         <!-- Left Section -->
                         <div class="left flex flex-col items-center justify-center w-full lg:w-1/2">
-                            <img class="w-full max-w-[29rem] h-auto mb-6 rounded-3xl shadow-sm"
+                            <img class="w-full max-w-[25rem] h-auto mb-6 rounded-3xl shadow-sm"
                                 src="assets/images/projects/video-chat-project.png" alt="Project" />
                         </div>
 
@@ -306,7 +312,7 @@
                                 <a href="#" target="_blank"
                                     class="text-blue-600 hover:text-blue-800 flex items-center gap-2">
                                     <span>Video Chat Web App</span>
-                                    <i class="ri-links-line"></i>
+                                    <i class="ri-arrow-right-up-line"></i>
                                 </a>
                             </h2>
                             <p class="text-gray-700 text-sm leading-relaxed mb-4">
@@ -322,10 +328,10 @@
                                 </a>
                                 <!-- Tech Stack -->
                                 <div class="stack flex flex-wrap justify-center gap-3">
-                                    <img class="w-7 h-7" src="assets/images/icons/Spring.svg" alt="Spring" />
-                                    <img class="w-7 h-7" src="assets/images/icons/java.svg" alt="Java" />
-                                    <img class="w-7 h-7" src="assets/images/icons/tailwind-css.svg" alt="TailwindCSS" />
-                                    <img class="w-7 h-7" src="assets/images/icons/Vue.js.svg" alt="VueJs" />
+                                    <img class="w-6 h-6" src="assets/images/icons/Spring.svg" alt="Spring" />
+                                    <img class="w-6 h-6" src="assets/images/icons/java.svg" alt="Java" />
+                                    <img class="w-6 h-6" src="assets/images/icons/tailwind-css.svg" alt="TailwindCSS" />
+                                    <img class="w-6 h-6" src="assets/images/icons/Vue.js.svg" alt="VueJs" />
                                 </div>
                             </div>
                         </div>
@@ -333,14 +339,14 @@
 
                     <!-- Project Box 3-->
                     <div
-                        class="box not-shown flex flex-col lg:flex-row items-center gap-8 w-full max-w-5xl p-6 rounded-3xl shadow-sm">
+                        class="box not-shown flex flex-col lg:flex-row items-center gap-8 w-full max-w-5xl p-6 shadow-sm">
                         <!-- Left Section -->
                         <div class="left flex flex-col items-start w-full lg:w-1/2 p-4">
                             <h2 class="text-xl font-semibold mb-4">
                                 <a href="#" target="_blank"
                                     class="text-blue-600 hover:text-blue-800 flex items-center gap-2">
                                     <span>Finance Landing Page</span>
-                                    <i class="ri-links-line"></i>
+                                    <i class="ri-arrow-right-up-line"></i>
                                 </a>
                             </h2>
                             <p class="text-gray-700 text-sm leading-relaxed mb-4">
@@ -356,16 +362,16 @@
                                 </a>
                                 <!-- Tech Stack -->
                                 <div class="stack flex flex-wrap justify-center gap-3">
-                                    <img class="w-7 h-7" src="assets/images/icons/Vue.js.svg" alt="VueJs" />
-                                    <img class="w-7 h-7" src="assets/images/icons/tailwind-css.svg" alt="TailwindCSS" />
-                                    <img class="w-7 h-7" src="assets/images/icons/Git.svg" alt="Git" />
+                                    <img class="w-6 h-6" src="assets/images/icons/Vue.js.svg" alt="VueJs" />
+                                    <img class="w-6 h-6" src="assets/images/icons/tailwind-css.svg" alt="TailwindCSS" />
+                                    <img class="w-6 h-6" src="assets/images/icons/Git.svg" alt="Git" />
                                 </div>
                             </div>
                         </div>
 
                         <!-- Right Section -->
                         <div class="right flex flex-col items-center justify-center w-full lg:w-1/2">
-                            <img class="w-full max-w-[29rem] h-auto mb-6 rounded-3xl shadow-sm"
+                            <img class="w-full max-w-[25rem] h-auto mb-6 rounded-3xl shadow-sm"
                                 src="assets/images/projects/payment-landing.png" alt="Project" />
                         </div>
                     </div>
@@ -381,7 +387,7 @@
                         <img src="assets/images/descriptions/talk.gif" alt="Contact" class="not-shown w-24 h-24" />
                     </div>
 
-                    <h1 class="title not-shown mt-8 text-5xl gradient-text text-center">
+                    <h1 class="title not-shown mt-8 text-4xl gradient-text text-center">
                         Have questions?<br />
                         Let's talk
                     </h1>
