Update: modified codebase to be have placeholder links

--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio website for Daniel Adediran - heisdanielade" />
-    <meta name="keywords"
-        content="heisdanielade, java, developer, poland, javascript, polish, zielona góra, software engineer, uz" />
-    <meta name="author" content="Daniel Adediran" />
     <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Portfolio | heisdanielade" />
+    <meta property="og:title" content="Portfolio v1 | heisdanielade" />
     <meta property="og:description" content="Portfolio website for Daniel Adediran - heisdanielade" />
     <meta property="og:image" content="https://heisdanielade.xyz/assets/images/projects/portfolio-project.png" />
-    <meta property="og:url" content="https://www.heisdanielade.xyz" />
-    <link rel="canonical" href="https://www.heisdanielade.xyz" />
     <!-- Addition files-->
     <link rel="stylesheet" href="./output.css" />
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="" />
     <!-- Page details -->
-    <title>Portfolio | heisdanielade</title>
+    <title>Portfolio v1 | heisdanielade</title>
     <link rel="shortcut icon" href="assets/images/me/favicon.png" type="image/x-icon" />
 </head>
 
@@ -45,12 +39,12 @@
             <nav class="nav h-14 container-padding-1 section w-full relative flex items-center justify-between">
                 <!-- Action links -->
                 <div class="nav__action__links flex items-center font-medium tracking-tight">
-                    <a href="mailto:danieladeofficial@gmail.com"
+                    <a href="#"
                         class="email btn-hover color-secondary bg-primary text-xs flex items-center justify-center w-20 h-10 rounded-full mr-2 p-2">
                         <i class="ri-mail-send-line mr-2"></i>
                         <span>Email</span>
                     </a>
-                    <a href="https://buymeacoffee.com/heisdanielade" target="_blank" id="buymeacoffee"
+                    <a href="#" target="_blank" id="buymeacoffee"
                         class="buymeacoffee text-xs flex items-center justify-center w-12 h-11 font-extrabold">
                         <span class="noth-icon">
                             <img src="assets/images/descriptions/coffee-cup.gif" alt="Coffee" class="w-9 h-9" />
@@ -61,12 +55,12 @@
                 <div class="nav__social__links flex">
                     <!-- mobile -->
                     <div class="mobile flex md:hidden lg:hidden items-center text-xl">
-                        <a href="https://www.linkedin.com/in/heisdanielade" aria-label="Visit LinkedIn profile"
+                        <a href="#" aria-label="Visit LinkedIn profile"
                             target="_blank"
                             class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i
                                 class="ri-linkedin-box-fill"></i></a>
-                        <!-- <a href="https://github.com/heisdanielade" aria-label="Visit GitHub profile" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-github-line"></i></a> -->
-                        <a href="https://leetcode.com/u/heisdanielade/" aria-label="Visit Leetcode profile"
+                        <!-- <a href="#" aria-label="Visit GitHub profile" target="_blank" class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-github-line"></i></a> -->
+                        <a href="#" aria-label="Visit Leetcode profile"
                             target="_blank"
                             class="flex color-primary bg-secondary items-center justify-center w-[2.825rem] h-[2.825rem] mr-1 rounded-full border-[0.25rem] border-solid">
                             <img src="./assets/images/logos/leetcode.svg" class="w-[1.075rem] h-[1.075rem]"
@@ -75,10 +69,10 @@
                     </div>
                     <!-- desktop -->
                     <div class="desktop hidden md:flex lg:flex color-primary text-sm">
-                        <a href="https://www.linkedin.com/in/heisdanielade" aria-label="Visit LinkedIn profile"
+                        <a href="#" aria-label="Visit LinkedIn profile"
                             target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">LinkedIn</a>
                         <span class="slash font-extrabold ml-2 mr-2">|</span>
-                        <a href="https://leetcode.com/u/heisdanielade/" aria-label="Visit Leetcode profile"
+                        <a href="#" aria-label="Visit Leetcode profile"
                             target="_blank" class="relative pb-[0.125rem] no-underline tracking-wide">Leetcode</a>
                     </div>
                 </div>
@@ -113,12 +107,11 @@
                             <span>Daniel Ade,</span><br />
                             <span class="text-xl font-semibold">CS Student @UZ.</span>
                         </span>
-                        <span class="hht stroke-text-2 hidden">xyz</span>
                     </h1>
                     <!-- link -->
-                    <a href="https://github.com/heisdanielade" target="_blank"
+                    <a href="https://github.com/heisdanielade/Portfolio-Website-v1" target="_blank"
                         class="github__link btn-hover not-shown color-secondary bg-primary flex items-center justify-center mt-9 mb-11 w-44 h-14 rounded-full">
-                        <span class="font-medium text-xs">Mój GitHub</span>
+                        <span class="font-medium text-xs">Repository</span>
                         <i class="ri-github-fill text-base ml-2"></i>
                     </a>
                 </div>
@@ -400,7 +393,7 @@
 
                 <!-- action buttons -->
                 <div class="actions not-shown flex items-center justify-center mt-8 text-xs font-medium">
-                    <a href="mailto:danieladeofficial@gmail.com" target="_blank"
+                    <a href="#" target="_blank"
                         class="btn-hover color-secondary bg-primary flex items-center justify-center w-24 h-12 rounded-full mr-2 p-2">
                         <i class="ri-mail-send-line mr-2"></i>
                         <span>Email</span>
@@ -444,11 +437,11 @@
 
                     <!-- social links -->
                     <div class="socials flex items-center justify-center text-xl">
-                        <a href="https://www.linkedin.com/in/heisdanielade" data-tooltip="LinkedIn"
+                        <a href="#" data-tooltip="LinkedIn"
                             aria-label="Visit LinkedIn profile" target="_blank"
                             class="tooltip color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full"><i
                                 class="ri-linkedin-box-fill"></i></a>
-                        <a href="https://leetcode.com/u/heisdanielade/" data-tooltip="Leetcode"
+                        <a href="#" data-tooltip="Leetcode"
                             aria-label="Visit Leetcode profile" target="_blank"
                             class="tooltip color-primary flex items-center justify-center w-10 h-10 mr-1 rounded-full">
                             <img src="./assets/images/logos/leetcode.svg" class="w-[1.075rem] h-[1.075rem]"
